# AADD

./: AADDConfig.h.in  CMakeLists.txt  COPYING  README.md
cmake-files/: FindGLPK.cmake
doc/: CMakeLists.txt  DoxyConfFile.in  README.md
examples/: README.md
examples/sigma-delta-mod/: README.md  plot-pdf  plot-svg
examples/sigma-delta-mod/cmake-files/: FindAADDLIB.cmake  FindGLPK.cmake  FindSystemC.cmake  FindSystemCAMS.cmake
examples/sigma-delta-mod/src/: adder.h  amp.h  discrt_int.h  drain.h  fft.h  onebitquant.h  stim.h
examples/waterlevel_monitor/: CMakeLists.txt  README.md  plot-pdf  plot-svg
examples/waterlevel_monitor/cmake-files/: FindAADDLib.cmake  FindSystemCAMS.cmake
examples/waterlevel_monitor/src/: CMakeLists.txt  main.cpp  waterlevel.cpp
src/: CMakeLists.txt  aa-LICENSE  aa.h  aa_aaf.h  aa_aafapprox.cpp  aa_aafarithm.cpp  aa_aafcommon.cpp  aa_aafspecial.cpp  aa_aaftrigo.cpp  aa_exceptions.cpp  aa_exceptions.h  aa_interval.cpp  aa_interval.h  aa_rounding.cpp  aa_rounding.h  aadd.h  aadd_arithmetic.cpp  aadd_bdd.cpp  aadd_bdd.h  aadd_common.cpp  aadd_config.h  aadd_ddbase.cpp  aadd_ddbase.h  aadd_ddbase_impl.h  aadd_io.cpp  aadd_logical.cpp  aadd_lp_glpk.cpp  aadd_lp_glpk.h  aadd_macros.h  aadd_mgr.cpp  aadd_mgr.h  aadd_off.h  aadd_relational.cpp
test/: CMakeLists.txt  comparison.cpp  copy.cpp  example1.cpp  example2.cpp  example3.cpp  if_elseif.cpp  if_stmt.cpp  tests.txt  waterlevel.cpp
